# livraria-drf

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_remove_categoria_nome_alter_categoria_descricao.py  0003_autor.py  0004_alter_autor_options_livro.py  0005_livro_autores.py  0006_compra.py  0007_compra_status.py  0008_itenscompra.py  0009_alter_categoria_descricao_alter_editora_nome_and_more.py  0010_alter_itenscompra_quantidade.py
core/views/: __init__.py  autor.py  categoria.py  categoriaAPIView.py  categoriaCBV.py  categoriaGenericAPIView.py  compra.py  editora.py  livro.py
livraria/: settings.py  urls.py
